reference/k/snapshots/compound-types-record-with-mixed-notation.snap
---
source: crates/cadenza-compiler/test-data/semantics/compound-types-record-with-mixed-notation.cdz
---
# compound-types-record-with-mixed-notation

## Input

```cadenza
let name = "Alice"
{ name, age = 30, active = true }
```

## AST

```lisp
(File (Path 47 85 115 101 114 115 47 98 121 116 104 101 119 99 47 80 114 111 106 101 99 116 115 47 99 97 109 115 104 97 102 116 47 99 97 100 101 110 122 97 47 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 99 111 109 112 111 117 110 100 45 116 121 112 101 115 45 114 101 99 111 114 100 45 119 105 116 104 45 109 105 120 101 100 45 110 111 116 97 116 105 111 110 46 99 100 122) (Span (0 19) (Apply (Op 61) (Apply (Ident 108 101 116) (Ident 110 97 109 101)) (String 65 108 105 99 101))) (Span (19 52) (Apply (Synthetic 95 95 114 101 99 111 114 100 95 95) (Ident 110 97 109 101) (Apply (Op 61) (Ident 97 103 101) (Integer 30)) (Apply (Op 61) (Ident 97 99 116 105 118 101) (Ident 116 114 117 101)))))
```

## Expected

```
() : Unit
{ name = "Alice", age = 30, active = true } : { name: String, age: Integer, active: Bool }
```

## K Output

```
<generatedTop>
  <k>
    record ( "active" |-> true
    "age" |-> 30
    "name" |-> "Alice" ) ~> .K
  </k>
  <scopes>
    0 |-> scope ( -1 , "name" |-> "Alice" )
  </scopes>
  <current-scope>
    0
  </current-scope>
  <next-scope>
    1
  </next-scope>
  <store>
    .Map
  </store>
  <next-cell>
    0
  </next-cell>
  <output>
    .List
  </output>
  <file>
    "<repo>/crates/cadenza-compiler/test-data/semantics/compound-types-record-with-mixed-notation.cdz"
  </file>
  <span-start>
    19
  </span-start>
  <span-end>
    52
  </span-end>
</generatedTop>
```

