reference/k/snapshots/compound-types-simple-field-access.snap
---
source: crates/cadenza-compiler/test-data/semantics/compound-types-simple-field-access.cdz
---
# compound-types-simple-field-access

## Input

```cadenza
let point = { x = 10, y = 20 }
point.x
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 99 111 109 112 111 117 110 100 45 116 121 112 101 115 45 115 105 109 112 108 101 45 102 105 101 108 100 45 97 99 99 101 115 115 46 99 100 122) (Span (0 31) (Apply (Op 61) (Apply (Ident 108 101 116) (Ident 112 111 105 110 116)) (Apply (Synthetic 95 95 114 101 99 111 114 100 95 95) (Apply (Op 61) (Ident 120) (Integer 10)) (Apply (Op 61) (Ident 121) (Integer 20))))) (Span (31 38) (Apply (Op 46) (Ident 112 111 105 110 116) (Ident 120))))
```

## Expected

```
() : Unit
10 : Integer
```

## K Output

```
<generatedTop>
  <k>
    10 ~> .K
  </k>
  <scopes>
    0 |-> scope ( -1 , "point" |-> record ( "x" |-> 10
    "y" |-> 20 ) )
  </scopes>
  <current-scope>
    0
  </current-scope>
  <next-scope>
    1
  </next-scope>
  <store>
    .Map
  </store>
  <next-cell>
    0
  </next-cell>
  <output>
    .List
  </output>
  <file>
    "<repo>/crates/cadenza-compiler/test-data/semantics/compound-types-simple-field-access.cdz"
  </file>
  <span-start>
    31
  </span-start>
  <span-end>
    38
  </span-end>
</generatedTop>
```

