reference/k/snapshots/compound-types-simple-list.snap
---
source: crates/cadenza-compiler/test-data/semantics/compound-types-simple-list.cdz
---
# compound-types-simple-list

## Input

```cadenza
[1, 2, 3, 4, 5]
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 99 111 109 112 111 117 110 100 45 116 121 112 101 115 45 115 105 109 112 108 101 45 108 105 115 116 46 99 100 122) (Span (0 15) (Apply (Synthetic 95 95 108 105 115 116 95 95) (Integer 1) (Integer 2) (Integer 3) (Integer 4) (Integer 5))))
```

## Expected

```
[1, 2, 3, 4, 5] : [Integer]
```

## K Output

```
<k>
  list ( ListItem ( 1 )
  ListItem ( 2 )
  ListItem ( 3 )
  ListItem ( 4 )
  ListItem ( 5 ) ) ~> .K
</k>
<scopes>
  0 |-> scope ( -1 , .Map )
</scopes>
<current-scope>
  0
</current-scope>
<next-scope>
  1
</next-scope>
<store>
  .Map
</store>
<next-cell>
  0
</next-cell>
<output>
  .List
</output>
<file>
  "crates/cadenza-compiler/test-data/semantics/compound-types-simple-list.cdz"
</file>
<span-start>
  0
</span-start>
<span-end>
  15
</span-end>
```

