reference/k/snapshots/compound-types-simple-record.snap
---
source: crates/cadenza-compiler/test-data/semantics/compound-types-simple-record.cdz
---
# compound-types-simple-record

## Input

```cadenza
{ x = 10, y = 20 }
```

## AST

```lisp
(File (Path 47 85 115 101 114 115 47 98 121 116 104 101 119 99 47 80 114 111 106 101 99 116 115 47 99 97 109 115 104 97 102 116 47 99 97 100 101 110 122 97 47 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 99 111 109 112 111 117 110 100 45 116 121 112 101 115 45 115 105 109 112 108 101 45 114 101 99 111 114 100 46 99 100 122) (Span (0 18) (Apply (Synthetic 95 95 114 101 99 111 114 100 95 95) (Apply (Op 61) (Ident 120) (Integer 10)) (Apply (Op 61) (Ident 121) (Integer 20)))))
```

## Expected

```
{ x = 10, y = 20 } : { x: Integer, y: Integer }
```

## K Output

```
<generatedTop>
  <k>
    record ( "x" |-> 10
    "y" |-> 20 ) ~> .K
  </k>
  <scopes>
    0 |-> scope ( -1 , .Map )
  </scopes>
  <current-scope>
    0
  </current-scope>
  <next-scope>
    1
  </next-scope>
  <store>
    .Map
  </store>
  <next-cell>
    0
  </next-cell>
  <output>
    .List
  </output>
  <file>
    "<repo>/crates/cadenza-compiler/test-data/semantics/compound-types-simple-record.cdz"
  </file>
  <span-start>
    0
  </span-start>
  <span-end>
    18
  </span-end>
</generatedTop>
```

