reference/k/snapshots/compound-types-tuple-with-different-types.snap
---
source: crates/cadenza-compiler/test-data/semantics/compound-types-tuple-with-different-types.cdz
---
# compound-types-tuple-with-different-types

## Input

```cadenza
("Alice", 30, true)
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 99 111 109 112 111 117 110 100 45 116 121 112 101 115 45 116 117 112 108 101 45 119 105 116 104 45 100 105 102 102 101 114 101 110 116 45 116 121 112 101 115 46 99 100 122) (Span (1 19) (Apply (Synthetic 95 95 116 117 112 108 101 95 95) (String 65 108 105 99 101) (Integer 30) (Ident 116 114 117 101))))
```

## Expected

```
("Alice", 30, true) : (String, Integer, Bool)
```

## K Output

```
<k>
  tuple ( ListItem ( "Alice" )
  ListItem ( 30 )
  ListItem ( true ) ) ~> .K
</k>
<scopes>
  0 |-> scope ( -1 , .Map )
</scopes>
<current-scope>
  0
</current-scope>
<next-scope>
  1
</next-scope>
<store>
  .Map
</store>
<next-cell>
  0
</next-cell>
<output>
  .List
</output>
<file>
  "crates/cadenza-compiler/test-data/semantics/compound-types-tuple-with-different-types.cdz"
</file>
<span-start>
  1
</span-start>
<span-end>
  19
</span-end>
```

