reference/k/snapshots/functions-application-as-argument.snap
---
source: crates/cadenza-compiler/test-data/semantics/functions-application-as-argument.cdz
---
# functions-application-as-argument

## Input

```cadenza
fn square x = x * x
fn apply_twice f x = f (f x)
apply_twice square 3
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 102 117 110 99 116 105 111 110 115 45 97 112 112 108 105 99 97 116 105 111 110 45 97 115 45 97 114 103 117 109 101 110 116 46 99 100 122) (Span (0 20) (Apply (Op 61) (Apply (Apply (Ident 102 110) (Ident 115 113 117 97 114 101)) (Ident 120)) (Apply (Op 42) (Ident 120) (Ident 120)))) (Span (20 49) (Apply (Op 61) (Apply (Apply (Apply (Ident 102 110) (Ident 97 112 112 108 121 95 116 119 105 99 101)) (Ident 102)) (Ident 120)) (Apply (Ident 102) (Apply (Ident 102) (Ident 120))))) (Span (49 69) (Apply (Apply (Ident 97 112 112 108 121 95 116 119 105 99 101) (Ident 115 113 117 97 114 101)) (Integer 3))))
```

## Expected

```
() : Unit
() : Unit
81 : Integer
```

## K Output

```
<generatedTop>
  <k>
    81 ~> .K
  </k>
  <scopes>
    0 |-> scope ( -1 , "apply_twice" |-> closure ( "apply_twice" , ListItem ( "f" )
    ListItem ( "x" ) , ( Apply ( Ident 102  .Chars ) ( Apply ( Ident 102  .Chars ) ( Ident 120  .Chars )  .Exprs )  .Exprs ) , "apply_twice" |-> pending ( "apply_twice" )
    "square" |-> closure ( "square" , ListItem ( "x" ) , ( Apply ( Op 42  .Chars ) ( Ident 120  .Chars )  ( Ident 120  .Chars )  .Exprs ) , "apply_twice" |-> pending ( "apply_twice" )
    "square" |-> pending ( "square" ) ) )
    "square" |-> closure ( "square" , ListItem ( "x" ) , ( Apply ( Op 42  .Chars ) ( Ident 120  .Chars )  ( Ident 120  .Chars )  .Exprs ) , "apply_twice" |-> pending ( "apply_twice" )
    "square" |-> pending ( "square" ) ) )
    1 |-> scope ( 0 , "apply_twice" |-> pending ( "apply_twice" )
    "f" |-> closure ( "square" , ListItem ( "x" ) , ( Apply ( Op 42  .Chars ) ( Ident 120  .Chars )  ( Ident 120  .Chars )  .Exprs ) , "apply_twice" |-> pending ( "apply_twice" )
    "square" |-> pending ( "square" ) )
    "square" |-> closure ( "square" , ListItem ( "x" ) , ( Apply ( Op 42  .Chars ) ( Ident 120  .Chars )  ( Ident 120  .Chars )  .Exprs ) , "apply_twice" |-> pending ( "apply_twice" )
    "square" |-> pending ( "square" ) )
    "x" |-> 3 )
    2 |-> scope ( 1 , "apply_twice" |-> pending ( "apply_twice" )
    "square" |-> pending ( "square" )
    "x" |-> 3 )
    3 |-> scope ( 1 , "apply_twice" |-> pending ( "apply_twice" )
    "square" |-> pending ( "square" )
    "x" |-> 9 )
  </scopes>
  <current-scope>
    0
  </current-scope>
  <next-scope>
    4
  </next-scope>
  <store>
    .Map
  </store>
  <next-cell>
    0
  </next-cell>
  <output>
    .List
  </output>
  <file>
    "<repo>/crates/cadenza-compiler/test-data/semantics/functions-application-as-argument.cdz"
  </file>
  <span-start>
    49
  </span-start>
  <span-end>
    69
  </span-end>
</generatedTop>
```

