reference/k/snapshots/functions-application-with-multiple-arguments.snap
---
source: crates/cadenza-compiler/test-data/semantics/functions-application-with-multiple-arguments.cdz
---
# functions-application-with-multiple-arguments

## Input

```cadenza
fn multiply x y = x * y
multiply 6 7
```

## AST

```lisp
(File (Path 47 85 115 101 114 115 47 98 121 116 104 101 119 99 47 80 114 111 106 101 99 116 115 47 99 97 109 115 104 97 102 116 47 99 97 100 101 110 122 97 47 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 102 117 110 99 116 105 111 110 115 45 97 112 112 108 105 99 97 116 105 111 110 45 119 105 116 104 45 109 117 108 116 105 112 108 101 45 97 114 103 117 109 101 110 116 115 46 99 100 122) (Span (0 24) (Apply (Op 61) (Apply (Apply (Apply (Ident 102 110) (Ident 109 117 108 116 105 112 108 121)) (Ident 120)) (Ident 121)) (Apply (Op 42) (Ident 120) (Ident 121)))) (Span (24 36) (Apply (Apply (Ident 109 117 108 116 105 112 108 121) (Integer 6)) (Integer 7))))
```

## Expected

```
() : Unit
42 : Integer
```

## K Output

```
<generatedTop>
  <k>
    42 ~> .K
  </k>
  <scopes>
    0 |-> scope ( -1 , "multiply" |-> closure ( "multiply" , ListItem ( "x" )
    ListItem ( "y" ) , ( Apply ( Op 42  .Chars ) ( Ident 120  .Chars )  ( Ident 121  .Chars )  .Exprs ) , "multiply" |-> pending ( "multiply" ) ) )
    1 |-> scope ( 0 , "multiply" |-> pending ( "multiply" )
    "x" |-> 6
    "y" |-> 7 )
  </scopes>
  <current-scope>
    0
  </current-scope>
  <next-scope>
    2
  </next-scope>
  <store>
    .Map
  </store>
  <next-cell>
    0
  </next-cell>
  <output>
    .List
  </output>
  <file>
    "<repo>/crates/cadenza-compiler/test-data/semantics/functions-application-with-multiple-arguments.cdz"
  </file>
  <span-start>
    24
  </span-start>
  <span-end>
    36
  </span-end>
</generatedTop>
```

